<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.minecraftcorp</groupId>
    <artifactId>lift-reloaded</artifactId>
    <version>2.4.4-SNAPSHOT</version>

    <name>LiftReloaded</name>
    <description>Simple and easy Lifts and Elevators for Bukkit</description>
    <url>https://github.com/kikelkik/LiftReloaded</url>

    <scm>
        <developerConnection>scm:git:https://github.com/kikelkik/LiftReloaded.git</developerConnection>
        <url>https://github.com/kikelkik/LiftReloaded.git</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <api.version>1.20</api.version>
        <!-- for local development: choose where to put the compiled plugin jar -->
        <plugin.directory>target</plugin.directory>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${api.version}-R0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.github.koca2000</groupId>
            <artifactId>NoteBlockAPI</artifactId>
            <version>1.6.2</version>
        </dependency>
        <dependency>
            <groupId>fr.neatmonster</groupId>
            <artifactId>nocheatplus</artifactId>
            <version>3.16.0-RC</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean install</defaultGoal>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources</directory>
                <includes>
                    <include>*.yml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <outputDirectory>${plugin.directory}</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <!-- for nocheatplus -->
            <id>md5-repo</id>
            <url>https://repo.md-5.net/repository/releases/</url>
        </repository>
        <repository>
            <!-- for note blocks -->
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

</project>
